[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdocr-rpc"
authors = [
  { name="mikigo", email="1964191531@qq.com" },
]
description = "PaddleOCR-RPC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyscreenshot",
]
dynamic = ["version"]

[tool.hatch.version]
path = "pdocr_rpc/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pdocr_rpc",
    "/README.md",
]

[project.urls]
"Homepage" = "https://github.com/funny-test/pdocr-rpc"
"Bug Tracker" = "https://github.com/funny-test/pdocr-rpc/issues"
