[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdocr-rpc"
authors = [
  { name="mikigo", email="1964191531@qq.com" },
]
description = "PaddleOCR-RPC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyscreenshot;sys_platform == 'linux'",
    "pillow;sys_platform == 'win32'",
]


dynamic = ["version"]

[project.optional-dependencies]
server = [
    "paddlepaddle",
    "paddleocr>=2.0.1"
]

test = [
    "pytest",
]

doc = ["mkdocs-material"]

[tool.hatch.version]
path = "pdocr_rpc/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pdocr_rpc",
    "/README.md",
]

[project.urls]
Source = "https://github.com/funny-dream/pdocr-rpc"
Documentation = "https://funny-dream.github.io/pdocr-rpc"
